@@ -111,16 +111,20 @@ get_port (void)
 static char *
 get_share_name (void)
 {
-	/* Translators: The %s will get filled in with the user name
-	   of the user, to form a genitive. If this is difficult to
-	   translate correctly so that it will work correctly in your
-	   language, you may use something equivalent to
-	   "Public files of %s", or leave out the %s altogether.
-	   In the latter case, please put "%.0s" somewhere in the string,
-	   which will match the user name string passed by the C code,
-	   but not put the user name in the final string. This is to
-	   avoid the warning that msgfmt might otherwise generate. */
-    return g_strdup_printf (_("%s's public files"), g_get_user_name ());
+	static char *name = NULL;
+	if (name == NULL) {
+		/* Translators: The %s will get filled in with the user name
+		   of the user, to form a genitive. If this is difficult to
+		   translate correctly so that it will work correctly in your
+		   language, you may use something equivalent to
+		   "Public files of %s", or leave out the %s altogether.
+		   In the latter case, please put "%.0s" somewhere in the string,
+		   which will match the user name string passed by the C code,
+		   but not put the user name in the final string. This is to
+		   avoid the warning that msgfmt might otherwise generate. */
+		name = g_strdup_printf (_("%s's public files"), g_get_user_name ());
+	}
+	return name;
 }
 
 
@@ -301,7 +305,6 @@ publish_service (int port)
 								   /* TODO: should be u=guest */
 								   /* text */ (unsigned char *) "", 0,
 								   publish_reply, NULL, &published_id);
-    g_free (share_name);
     if (result != SW_OKAY) {
 		return FALSE;
     }
